styles: Fix the oversized search bar on mobile.
On mobile devices, the search bar appears as too tall for the rest of
the top header. Fix this by setting `#search_query`'s height and
vertical alignment properties.

Fix #10373.

--- a/static/styles/media.scss
+++ b/static/styles/media.scss
@@ -221,12 +221,16 @@
     #tab_bar,
     #searchbox,
     #searchbox_legacy,
-    #search_query,
     #tab_list li,
     #tab_list,
     .header {
         height: 30px;
         line-height: 30px;
+    }
+
+    #search_query {
+        height: 30px !important;
+        vertical-align: text-bottom;
     }
 
     #streamlist-toggle-button,
